# geodio

./: .gitmodules  CMakeLists.txt  README.md  build_geodio.sh
core/: logger.py  utils.py
core/cell/: __init__.py  cell.py  geoo.py  locker.py
core/cell/collections/: basefunctions.py  builtin_functors.py  builtins.py  functors.py  neurons.py
core/cell/math/: __init__.py  backpropagation.py  derivable.py
core/cell/operands/: __init__.py  constant.py  function.py  operand.py  stateful.py  utility.py  variable.py  weight.py
core/cell/operands/collections/: __init__.py  bank.py  basefunctions.py  builtins.py  neurons.py
core/cell/operands/collections/activation_function/: __init__.py  base_activation_function.py  linear.py  relu.py  sigmoid.py  softmax.py
core/cell/operands/collections/builtins/: __init__.py  add.py  builtinbase.py  div.py  dot.py  linear_transformation.py  linker.py  log.py  matmul.py  max.py  power.py  prod.py  recseq.py  seq.py  sub.py  transpose.py
core/cell/optim/: fitness.py  loss.py  optimizable.py  optimization_args.py  optimizer.py
core/cell/train/: __init__.py  boo.py  forest.py  optimizable.py  optimization_args.py
core/cell/train/loss/: __init__.py  loss_function.py  mse.py  mse_multivar.py
core/cell/train/optimization/: __init__.py  backprop_optimization.py  base_optimization.py  default_optimization.py  picky_optimization.py
core/cell/train/optimization/regularization/: __init__.py  adam_grad_reg.py  base_grad_reg.py
core/cell/train/optimizer/: __init__.py  default_optimizer.py  epoched.py  fisher_optimizer.py  parasitic_epoched.py  utils.py
core/cell/train/optimizer/optimization/: __init__.py  backprop_optimization.py  base_optimization.py  default_optimization.py  picky_optimization.py
core/cpp_wrappers/: tensor_wrapper.py  tensor_wrapper_test.py
core/freezing/: freezer.py
core/freezing/file_operations/: __init__.py  build.sh  setup.py  verify.py
core/freezing/file_operations/src/: FileOperations.h  file_operations.pyx
core/genetic/: cell_utils.py  generator.py  pop.py  pop_utils.py
core/math/: hashy.py
core/organism/: activation_function.py  backpropagation.py  connect.py  layer.py  link.py  node.py  organism.py  router.py
core/organism/connect/: __init__.py  aggregation.py  parasite.py  parasitic_linker.py  utils.py
core/parser/: OperandBuilder.py  Yaguar.g4  build.sh  builtins.py  main.ya  yaguar.py
cpp/: CMakeLists.txt  main.cpp  transpiler.py
cpp/fortran_binding/: c_tensor.f90
cpp/src/: main.cpp
cpp/src/backends/: Backend.h  BackendManager.h  CPUBackend.cpp  CPUBackend.h
cpp/src/bindings/: a_tens_binding.cpp  geodio_binding.cpp
cpp/src/operands/: ComputationalGraph.h  ExecutionContext.cpp  ExecutionContext.h  ExecutionEngine.cpp  ExecutionEngine.h  Operand.h  OperandType.cpp  OperandType.h  Operation.h  OperationRegistry.cpp  OperationRegistry.h  Token.h  operations.cpp  operations.h
cpp/src/operands/optimization/: AdamOptimizer.cpp  AdamOptimizer.h  LossFunction.cpp  LossFunction.h  OptimizationArgs.cpp  OptimizationArgs.h
cpp/src/tensors/: AnyTensor.cpp  AnyTensor.h  ApplyType.h  ITensor.cpp  ITensor.h  Slice.h  Tensor.cpp  Tensor.h  TensorDb.cpp  TensorDb.h  TensorGPU.cpp  TensorGPU.h  Tensor_C_API.cpp  Tensor_C_API.h
cpp/src/utils/: VectorGenerator.h
cpp/tests/: runner.cpp  runner.h  test_execution_engine.cpp  test_execution_engine.h  test_slice_mem.cpp  test_slice_mem.h  test_tensor_db.cpp  test_tensor_db.h  test_tensors.cpp  test_tensors.h
examples/: expression.py  neuron_example.py  organism_generation.py  simple_function_1.py  simple_function_2.py  simple_function_from_default_1.py  tree.py
examples/node/: and_node.py  iris.py  iris_2.py  simple_node.py  state_node.py  xor.py
examples/node/backprop/: xor_backprop.py
prototypes/: layer_2.py  link.py  organism.py  organism_2.py  rog.py  router.py
python/: MANIFEST.IN  requirements.txt  setup.py
python/geodio/: __init__.py
python/geodio/core/: __init__.py  logger.py  main.py
python/geodio/core/cell/: __init__.py  cell.py  geoo.py
python/geodio/core/cell/math/: __init__.py  hashy.py
python/geodio/core/cell/operands/: __init__.py  constant.py  function.py  operand.py  stateful.py  utility.py  variable.py  weight.py
python/geodio/core/cell/train/: __init__.py  boo.py  optimizable.py  optimization_args.py
python/geodio/core/cpp_wrappers/: __init__.py  graph_wrapper.py  tensor_wrapper.py  tensor_wrapper_test.py
python/geodio/core/freezing/: freezer.py
python/geodio/core/freezing/file_operations/: __init__.py
python/geodio/core/genetic/: cell_utils.py  generator.py  pop.py
python/geodio/core/organism/: organism.py
python/geodio/core/organism/connect/: __init__.py  parasite.py  parasitic_linker.py  utils.py
python/geodio/core/parser/: OperandBuilder.py  Yaguar.g4  __init__.py  build.sh  builtins.py  clean.sh  main.ya  requirements.txt  yaguar.py
python/geodio/tests/: test_cell.py  test_execution_engine.py  test_linear_transformation.py  test_req_seq.py
python/geodio/tests/freezing/: test_file_operatons.py
src/: genetic.py  genetic_util.py  main.py  optimizer.py  pop.py  rnd.py  tree.py
src/cell/: cell.py  default_functors.py  derivable.py  fitness.py  freezer.py  functors.py  layer.py  link.py  neurons.py
src/cell/collections/: bank.py  builtin_functors.py  default_functors.py  functors.py  neurons.py
src/cell/operands/: constant.py  function.py  operand.py  variable.py  weight.py
src/cell/optim/: fitness.py  optimizable.py  optimizer.py
src/freezing/: freezer.py
src/genetic/: cell_utils.py  generator.py  organism.py  pop.py
src/organism/: layer.py  link.py  organism.py
tests/: test_cell.py  test_linear_transformation.py  test_linker.py  test_multi_tree.py  test_node.py  test_req_seq.py  test_router.py  tree_test.py
tests/freezing/: test_file_operatons.py
transpiler/: __init__.py  build.sh  setup.py  verify.py
transpiler/src/: Addition.c  Addition.h  LinearTransformation.c  LinearTransformation.cu  LinearTransformation.h  c_operands.pyx
(+70 files in other folders)
